tests/errors/macros/invalid_let_in_macro.ark
($ defun (name args body) (let 0000 (fun args body)))
(defun a_func (a b) (+ a b))
(print (a_func 1 2))
